# LinuxAirCombat

./: .gitattributes  CMakeLists.txt  Lac09p15.cbp  Lac09p15.depend  Lac09p15.layout  LacConfig.txt  LacControls.Generic.txt  LacControls.SteamDeck.txt  LacControls.txt  Makefile  README.txt  WhatsNew.txt  conanfile.txt  install.sh
Engine/: CMakeLists.txt
Engine/include/Engine/: BinaryFile.h  Color.h  Directories.h  GLBackend.h  Material.h  Mesh.h  MeshLoader3ds.h  Model.h  ModelLoader3ds.h  OpenGLBackend.h  RenderBackend.h  Texture.h  Window.h
Engine/include/Engine/OpenGL/: GLMesh.h  GLProgram.h  GLShader.h  GLTexture.h  OpenGLMesh.h  OpenGLProgram.h  OpenGLShader.h
Engine/src/: BinaryFile.cpp  Directories.cpp  GLBackend.cpp  GLMesh.cpp  GLProgram.cpp  GLShader.cpp  LoadTextureTGA.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelLoader3ds.cpp  OpenGLBackend.cpp  OpenGLMesh.cpp  OpenGLProgram.cpp  OpenGLShader.cpp  RenderBackend.cpp  Texture.cpp  Window.cpp
Testing/: CMakeLists.txt
Testing/3DSLoader/: CMakeLists.txt  main.cpp
Testing/ModelViewer/: CMakeLists.txt  main.cpp
Testing/ModelViewer/data/: a6m2.3ds
Testing/TGALoader/: CMakeLists.txt  main.cpp
data/models/: Airfield00.3ds  B25.3ds  B26.3ds  B5N.3ds  DW520.3ds  Dornier17.3ds  F4F.3ds  F4UYellowNose.3ds  F6F.3ds  Generic01.3ds  HE111.3ds  HURRICANE.3ds  IL16.3ds  IL2.3ds  JU87.3ds  JU88.3ds  KI43.3ds  KI61.3ds  KI84.3ds  La5.3ds  La7.3ds  ME109.3ds  MosquitoB.3ds  N1K1.3ds  P38F.3ds  P40.3ds  P47B.3ds  P47aa.3ds  RadarReflector01.3ds  SPIT5.3ds  TBF.3ds  TEMPEST.3ds  Yak1.3ds  a6m5.3ds  bomb1.3ds  depot1.3ds  gl-14c.3ds  hall1.3ds  missile3.3ds  p38Laa.3ds  (+2 more)
data/textures/: LacTitle.tga  cactusu1.tga  clouds1.tga  clouds2.tga  earth.tga  flare1.tga  flare2.tga  flare3.tga  flare4.tga  gl-50_c2.tga  glitter.tga  gravel1.tga  radar2.tga  redsand1.tga  redstone2.tga  sand1.tga  smoke2.tga  smoke3.tga  tree1.tga  tree2.tga  treeu3.tga  treeu4.tga  water1.tga
src/: 3ds.cpp  3ds.h  FlightModel.cpp  MissionNetworkBattle01.cpp  MissionNetworkBattle02.cpp  MissionNetworkBattle03.cpp  MissionNetworkBattle04.cpp  MissionNetworkBattle05.cpp  MissionNetworkBattle06.cpp  MissionNetworkBattle07.cpp  MissionNetworkBattle08.cpp  MissionNetworkBattle09.cpp  MissionNetworkBattle10.cpp  NetworkApi.cpp  NetworkApi.h  PlatformFolders.cpp  PlatformFolders.h  aiobject.cpp  aiobject.h  audio..cpp  audio.cpp  audio.h  cockpit.cpp  cockpit.h  common.cpp  common.h  conf.cpp  conf.h  config.h  dirs.cpp  dirs.h  effects.cpp  effects.h  fileloader.cpp  fileloader.h  gl.cpp  gl.h  glland.cpp  glland.h  land.cpp  (+21 more)
